# seed-tools

./: Cargo.toml  README.md  seed-tools.sh
config/: config.yaml
config/trackers/: seedpool.yaml  torrentleech.yaml
src/: common.rs  irc.rs  lib.rs  sync.rs  types.rs  ui.rs  utils.rs
