[package]
name = "seed-tools"
version = "0.3.5"
edition = "2024"

[dependencies]
chrono = "0.4"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
glob = "0.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "cookies", "multipart", "json"] }
urlencoding = "2.1"
regex = "1.7"
base64 = "0.22.1"
include_dir = "0.7"
serde_json = "1.0"
tempfile = "3.3"
indicatif = "0.17"
crossterm = "0.26"
dialoguer = "0.10"
log = "0.4"
simplelog = "0.12"
bencode = "0.1.16"
bendy = "0.3.3"
clap = { version = "4.4", features = ["derive"] }
irc = "1.1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tui = "0.19"
walkdir = "2.3.3"
tail = "0.3"
notify = "5.1"
winnow = "0.5"
vte = "0.11"
ctrlc = "3.2"
cargo-bundle = "0.6"
epub = "2.1.3"
lopdf = "0.32"
zip = "0.6"

[package.metadata.bundle]
resources = ["binaries/"]

[profile.release]
lto = true

[[bin]]
name = "seed-tools"
path = "src/bin/main.rs"